# depin

./: .gitignore  README.md  app.py  di_framework.py  foo.py  inject.py  main.py  perf.py  pyproject.toml  pyrightconfig.json  test.py
depin/: __init__.py
depin/_internal/: container.py  exceptions.py  helpers.py  request_scope.py  types.py  wraps.py
depin/extensions/: fastapi.py
depin/internal/: __auto_scan.py  container.py  exceptions.py  helpers.py  request_scope.py  types.py
example/: app.py  database.py
example/dependencies/: __init__.py  common.py  container.py  database.py
example/repository/: role_repo.py  user_repo.py
example/service/: role_service.py  user_service.py
services/: user_repository.py  user_service.py
src/: di_framework.py
test/: test_auto_scan.py
tests/: conftest.py
tests/depin/: test_Inject_param.py  test_Provide_param.py  test_basic_injection.py  test_dependencies.py  test_edge_cases.py  test_inject_decorator.py  test_provider_fn.py  test_request_scope.py  test_singleton_scope.py  test_transient_scope.py  test_with_dataclass.py
